# SparxMathsBot

./: .env.example  .gitignore  README.md  WORKFLOWS.md  example.py  main.py  pyproject.toml  requirements.txt  validate_setup.py  workflow_log.txt
sparx_maths_bot/: __init__.py  __main__.py  bot.py
src/: __init__.py  base_workflow.py  browser_manager.py  config.py  decorators.py  email_notifier.py  geckodriver_setup.py  general_questions_workflow.py  image_processor.py  logger_setup.py  logging_utils.py  times_tables_workflow.py  workflow.py
